--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <p>This is a new paragraph of LocalRepo</p>
+<p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, iste.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium hic, 
+et ut dignissimos perferendis facere! Doloribus ipsum molestias hic, nulla 
+esse assumenda, reiciendis, ullam harum fugiat mollitia temporibus dolores eveniet.
+</p>
